# teacherai-analysis

./: .gitignore  config.yml  environment.yml  pyproject.toml
scripts/allocation/: allocate_groups.py
scripts/chatlogs/: analyse_usage.py  embedding_analysis.py  find_threads.py
src/: tai_config.py  tai_constants.py  tai_download.py
src/allocation/: allocate_fun.py
src/chatlogs/: embeddings.py  threads.py
